# synergy-core

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  ChangeLog  README.md  sonar-project.properties
.github/: matrix.yml
.github/actions/get-version/: action.yml
.github/actions/install-dependencies/: action.yml
.github/actions/install-deps/: action.yml
.github/actions/lint-clang/: action.yml
.github/actions/release-windows/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/sign-windows/: action.yml
.github/actions/test-package/: action.yml
.github/workflows/: ci-comment.yml  ci.yml
cmake/: Build.cmake  Libraries.cmake
deploy/: CMakeLists.txt
deploy/linux/: deploy.cmake
deploy/linux/arch/: PKGBUILD.in
deploy/mac/: deploy.cmake  generate_ds_store.applescript
deploy/windows/: deploy.cmake  pre-cpack.cmake.in  wix-patch.xml.in
docs/user/: configuration.md
extra/: CMakeLists.txt  Synergy.test.example.conf
extra/cmake/: MsvcRuntime.cmake  SaveVersion.cmake  Synergy.cmake  Version.cmake
extra/deploy/: PackageFileName.cmake
extra/deploy/linux/: com.symless.synergy.desktop  com.symless.synergy.metainfo.xml
extra/deploy/linux/flatpak/: ci-build-lint-exceptions.json  com.symless.synergy.yml
extra/deploy/mac/: codesign.cmake.in  synergy-eula.txt
extra/deploy/mac/bundle/Contents/: Info.plist.in
extra/deploy/windows/: synergy-eula.rtf
extra/src/: CMakeLists.txt
extra/src/apps/res/: synergy-dark.theme  synergy-light.theme  synergy.qrc
extra/src/integtests/: CMakeLists.txt
extra/src/lib/: CMakeLists.txt
extra/src/lib/synergy/: CMakeLists.txt  build_config.h
extra/src/lib/synergy/gui/: ActivationDialog.cpp  ActivationDialog.h  ActivationDialog.ui  AppTime.cpp  AppTime.h  CMakeLists.txt  CancelActivationDialog.cpp  CancelActivationDialog.h  CancelActivationDialog.ui  ExtraSettings.cpp  ExtraSettings.h  FeatureHandler.cpp  FeatureHandler.h  OfflineActivationDialog.cpp  OfflineActivationDialog.h  SettingsMigration.cpp  SettingsMigration.h  SettingsScope.cpp  SettingsScope.h  TestSettings.cpp  TestSettings.h  UpdateChannel.cpp  UpdateChannel.h  constants.h  dev_mode.h  styles.h
extra/src/lib/synergy/gui/dialogs/: UpgradeDialog.cpp  UpgradeDialog.h
extra/src/lib/synergy/gui/license/: LicenseApiClient.cpp  LicenseApiClient.h  LicenseHandler.cpp  LicenseHandler.h  license_notices.cpp  license_notices.h  license_utils.cpp  license_utils.h
extra/src/lib/synergy/hooks/: gui_hook.h  gui_hook_config.h.in
extra/src/lib/synergy/license/: CMakeLists.txt  License.cpp  License.h  OfflineActivation.cpp  OfflineActivation.h  Product.cpp  Product.h  SerialKey.h  SerialKeyType.cpp  SerialKeyType.h  parse_serial_key.cpp  parse_serial_key.h
extra/src/unittests/: CMakeLists.txt
extra/src/unittests/gui/license/: LicenseHandlerTests.cpp  license_notices_tests.cpp
extra/src/unittests/license/: LicenseTests.cpp  OfflineActivationTests.cpp  ProductTests.cpp  SerialKeyTypeTests.cpp
scripts/: install_deps.sh
scripts/lib/: cmd_utils.py
src/apps/: CMakeLists.txt
src/apps/deskflow-core/: CMakeLists.txt  CoreArgParser.cpp  deskflow-core.cpp
src/apps/deskflow-daemon/: CMakeLists.txt  deskflow-daemon.cpp
src/apps/deskflow-gui/: CMakeLists.txt  deskflow-gui.cpp
src/apps/res/: deskflow.plist.in
src/cmd/deskflowc/: CMakeLists.txt
src/cmd/deskflowd/: CMakeLists.txt
src/cmd/deskflows/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/gui/src/: Hotkey.cpp  KeySequence.cpp  KeySequence.h  QUtility.cpp  ScreenSettingsDialog.cpp  ScreenSettingsDialogBase.ui  ScreenSetupView.cpp  ScreenSetupView.h  ServerConfig.cpp  ServerConfig.h  ServerConfigDialog.cpp  ServerConfigDialogBase.ui
src/lib/: CMakeLists.txt
src/lib/arch/: Arch.h  CMakeLists.txt
src/lib/arch/unix/: ArchSystemUnix.cpp
src/lib/arch/win32/: ArchDaemonWindows.cpp
src/lib/base/: EventTypes.cpp  EventTypes.h  LogOutputters.cpp
src/lib/client/: Client.cpp  Client.h  ServerProxy.cpp  ServerProxy.h
src/lib/common/: CMakeLists.txt  Constants.h.in  I18N.cpp  LogLevel.h  Settings.cpp  Settings.h  UrlConstants.h  UrlConstants.h.in  VersionInfo.h.in
src/lib/deskflow/: CMakeLists.txt  ClientApp.cpp  IPlatformScreen.h  Screen.cpp  Screen.h  option_types.h  protocol_types.cpp  protocol_types.h
src/lib/deskflow/ipc/: DaemonIpcServer.cpp  IpcServer.cpp
src/lib/gui/: CMakeLists.txt  Diagnostic.cpp  Hotkey.cpp  KeySequence.cpp  Logger.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  Messages.cpp  TlsUtility.cpp  VersionChecker.cpp  diagnostic.cpp
src/lib/gui/config/: Screen.cpp  Screen.h  ServerConfig.cpp  ServerConfig.h  Settings.cpp
src/lib/gui/core/: CoreProcess.cpp  NetworkMonitor.cpp
src/lib/gui/dialogs/: AboutDialog.cpp  AboutDialog.ui  ClientConfigDialog.cpp  ServerConfigDialog.cpp  ServerConfigDialog.ui  SettingsDialog.cpp  SettingsDialog.ui
src/lib/gui/ipc/: IpcClient.cpp
src/lib/net/: CMakeLists.txt  FingerprintDatabase.h  SecureSocket.cpp  SecureUtils.cpp
src/lib/platform/: CMakeLists.txt  MSWindowsClipboard.cpp  MSWindowsDesks.cpp  MSWindowsDesks.h  MSWindowsHook.cpp  MSWindowsHook.h  MSWindowsScreen.cpp  MSWindowsScreen.h  MSWindowsWatchdog.cpp  MSWindowsWatchdog.h  OSXClipboardBMPConverter.h  OSXPowerManager.cpp  PortalInputCapture.cpp  PortalInputCapture.h  PortalRemoteDesktop.cpp  XDGPortalRegistry.h  XWindowsClipboardTextConverter.cpp  dfwhook.h
src/lib/server/: ClientProxy1_0.cpp  ClientProxy1_0.h  ClientProxy1_9.cpp  ClientProxy1_9.h  ClientProxyUnknown.cpp  Config.cpp  PrimaryClient.cpp  PrimaryClient.h  Server.cpp  Server.h
src/unittests/deskflow/: ClipboardTests.cpp
src/unittests/platform/: XWindowsClipboardTests.cpp  XWindowsClipboardTests.h
translations/: CMakeLists.txt  deskflow_es.ts  deskflow_it.ts  deskflow_ja.ts  deskflow_ko.ts  deskflow_ru.ts  deskflow_zh_CN.ts
(+11 files in other folders)
